--- a/src/app/gifs/components/side-menu/side-menu.component.html
+++ b/src/app/gifs/components/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<div id="menu"  class="bg-gray-900 w-[220px] min-h-screen z-10 text-slate-300  fixed left-0 h-screen overflow-y-scroll">
+<div id="menu"  class="bg-gray-900 w-[220px] min-h-screen z-10 text-slate-300  fixed left-0 h-screen ">
             
     <app-side-menu-header></app-side-menu-header>
 
