--- a/src/app/gifs/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/gifs/pages/dashboard-page/dashboard-page.component.html
@@ -1,4 +1,4 @@
-<div class="bg-slate-100 overflow-y-scroll w-screen h-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
+<div class="bg-slate-100  w-screen h-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
     <div class="flex flex-col relative w-screen">
 
 
@@ -7,7 +7,7 @@
 
 
 
-        <div class="ml-[230px] px-4 flex flex-col flex-1 w-full h-full text-slate-800" >
+        <div class="ml-[220px] px-4 flex flex-col flex-1  h-full text-slate-800" >
             <router-outlet></router-outlet>
         </div>
         
