--- a/src/app/gifs/components/gif-list/gif-list.component.html
+++ b/src/app/gifs/components/gif-list/gif-list.component.html
@@ -2,7 +2,7 @@
 
     @for (gif of gifs(); track gif) {
 
-        <app-gif-list-item [imageUrl]="gif" ></app-gif-list-item>
+        <app-gif-list-item [imageUrl]="gif.url" ></app-gif-list-item>
     }
 
     
