--- a/src/app/gifs/pages/trending/trending.component.html
+++ b/src/app/gifs/pages/trending/trending.component.html
@@ -1,6 +1,6 @@
 <div class="py-5">
 
-    <app-gif-list [gifs]="gifs()" ></app-gif-list>
+    <app-gif-list [gifs]="gifService.trendingGifs()" ></app-gif-list>
 </div>
 
 
