--- a/src/app/gifs/pages/search/search.component.html
+++ b/src/app/gifs/pages/search/search.component.html
@@ -5,5 +5,14 @@
     <input type="text"
     placeholder="Buscar Gifs"
     class="mt-3 border border-gray-300 rounded-md p-2"
+    (keyup.enter)="onSearch(txtSearch.value)"
+    #txtSearch
     >
 </section>
+
+<div class="py-5">
+
+    <app-gif-list [gifs]="gifs()" ></app-gif-list>
+</div>
+
+
