--- a/src/app/gifs/pages/gif-history/gif-history.component.html
+++ b/src/app/gifs/pages/gif-history/gif-history.component.html
@@ -1,2 +1,6 @@
 
-<h1> {{ query() }} </h1>
+<h3 class="text-2xl font-bold mt-4" > Mostrando: {{ query() }} </h3>
+<hr>
+<section class="py-5" >
+    <app-gif-list [gifs]="gifsByKey()" ></app-gif-list>
+</section>
